2002-01-14	Restored V4L interface, more test stuff, fixes <mschimek@users.sf.net>

	* src/io_v4l.c: Added, *untested*.
	* test/osc: Try v4l2, then v4l.
	* po: Updated.
	* src/hamm.c: Corrected char types (use char only for
	  text, these are ints).
	* src/export.c: Bugfix in option_string(), didn't
	  accept '-' and '_' in option keywords.
	* test/capture.c: Added, from old vbi_decoder().
	* test/sim.c: Ditto, plus new Teletext simulation.
	* test: Updated, misc small improvements.

2002-01-13	Fixes <mschimek@users.sf.net>

	* test/explist.h: Option type check.
	* doc/tmpl/sliced.sgml: Corrected .gif names.
	* src/export.c: Fixed vbi_export_option_menu_set(), didn't check
	  for entry < 0.

2002-01-12	Imported libzvbi into Zapping CVS <mschimek@users.sf.net>

	* Renamed to libzvbi to avoid a name conflict. VBI is an ubiquitious
	  acronym and there are at least two other libvbi's around.
	* libzvbi.h: Now generated at compile time, so we can keep public
	  and private definitions together, autodocs are filtered out.
	  Added version #defines.
	* Separated bcd.h, event.h, search.h. Removed os.h.
	* Prefixed vbi_ and VBI_ a few remaining symbols, attr_stuff became
	  vbi_stuff and fmt_page vbi_page. Purpose to avoid name conflicts
	  since we're going public.
	* New vbi_char (former attr_char) encodes characters as Unicode
	  to improve interoperability. Translation TTX/CC->Unicode in
	  decoder, Unicode->glyph in export functions. This affects TTX
	  combined glyphs, now only those covered by U+00A0 to U+017F
	  can be decoded and displayed. Future Latin Ext-B?
	* exp_gfx.c: Changed PPM color depth from 4 to 8 bits. PNG export
	  now works with Closed Caption pages.
	* exp_html.c: Teletext G1/G3 substituting and Network name in
	  title doesn't exist anymore, XXX should be restored.
	* exp-txt.c: vbi_print_page replaced the string module used for
	  cut&paste. ANSI/ASCII modules dropped, the new text module